# hello-java

./: .gitignore  README.md  build.bat  hello.c  meson.build
src/java/: meson.build
src/java/hello/: Application.java
subprojects/: avian.wrap
toolchains/: linux-32.txt  linux-64.txt  linux-arm-32.txt  linux-arm-64.txt  linux-arm32.txt  linux-arm64.txt  macosx-32.txt  macosx-64.txt  windows-32.txt  windows-64.txt
